Change history for HTML-Parser

{{$NEXT}}
  * Cleaned up this changes log.
  * Added a .mailmap file to organize contributions accurately.
  * Ensure all versions are equal and on the current version
  * Add the .mailmap to the MANIFEST
  * Change the META information to point to the new GH repository
  * Add a .perltidyrc to use going forward

2016-01-19     3.72
  * Avoid more clang casting warnings
  * Remove trailing whitespace
  * Ensure entities expand to utf8 sequences under 'utf8_mode' [RT#99755]
  * typo fixes (David Steinbrunner)
  * Silence clang warning (Jacques Germishuys)
  * const+static-ing (bulk88)

2013-05-09     3.71
  * Transform ':' in headers to '-' [RT#80524]

2013-03-28     3.70
  * Fix for cross-compiling with Buildroot (François Perrad)
  * Comment typo fix
  * Fix Issue #3 / RT #84144: HTML::Entities::decode_entities() needs
    to call SV_CHECK_THINKFIRST() before checking READONLY flag (Yves Orton)

2011-10-15     3.69
  * Documentation fix; encode_utf8 mixup [RT#71151]
  * Make it clearer that there are 2 (actually 3) options for handing "UTF-8 garbage"
  * Github is the official repo
  * Can't be bothered to try to fix the failures that occur on perl-5.6
  * fix to TokeParser to correctly handle option configuration (Barbie)
  * Aesthetic change: remove extra ; (Jon Jensen)
  * Trim surrounding whitespace from extracted URLs. (Ville Skyttä)

2010-09-01     3.68
  * Declare the encoding of the POD to be utf8

2010-08-17     3.67
  * bleadperl 2154eca7 breaks HTML::Parser 3.66 [RT#60368] (Nicholas Clark)

2010-07-09     3.66
  * Fix entity decoding in utf8_mode for the title header

2010-04-04     3.65
  * Eliminate buggy entities_decode_old
  * Fixed endianness typo [RT#50811] (Salvatore Bonaccorso)
  * Documentation Fixes. (Ville Skyttä)

2009-10-25     3.64
  * Convert files to UTF-8
  * Don't allow decode_entities() to generate illegal Unicode chars
  * Copyright 2009
  * Remove rendundant (repeated) test