@@ -3,8 +3,6 @@ pm_to_blib
 Parser.c
 Parser.bs
 Makefile
-hctype.h
-pfunc.h
 *.o
 *.old
 *.tar.gz
