@@ -1,0 +1,54 @@
+/* This file is autogenerated by mkhctype */
+
+#define HCTYPE_SPACE                 0x01
+#define HCTYPE_NAME_FIRST            0x02
+#define HCTYPE_NAME_CHAR             0x04
+#define HCTYPE_NOT_SPACE_GT          0x08
+#define HCTYPE_NOT_SPACE_EQ_GT       0x10
+#define HCTYPE_NOT_SPACE_SLASH_GT    0x20
+#define HCTYPE_NOT_SPACE_EQ_SLASH_GT 0x40
+
+#define HCTYPE(c)       hctype[(unsigned char)(c)]
+#define isHCTYPE(c, w)  (HCTYPE(c) & (w))
+
+#define isHSPACE(c)        isHCTYPE(c, HCTYPE_SPACE)
+#define isHNAME_FIRST(c)   isHCTYPE(c, HCTYPE_NAME_FIRST)
+#define isHNAME_CHAR(c)    isHCTYPE(c, HCTYPE_NAME_CHAR)
+#define isHNOT_SPACE_GT(c) isHCTYPE(c, HCTYPE_NOT_SPACE_GT)
+
+typedef unsigned char hctype_t;
+
+static hctype_t hctype[] = {
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /*   0 -   7 */
+    0x78, 0x01, 0x01, 0x01, 0x01, 0x01, 0x78, 0x78,  /*   8 -  15 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /*  16 -  23 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /*  24 -  31 */
+    0x01, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /*  32 -  39 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x7c, 0x7c, 0x58,  /*  40 -  47 */
+    0x7c, 0x7c, 0x7c, 0x7c, 0x7c, 0x7c, 0x7c, 0x7c,  /*  48 -  55 */
+    0x7c, 0x7c, 0x7e, 0x78, 0x78, 0x28, 0x00, 0x78,  /*  56 -  63 */
+    0x78, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e,  /*  64 -  71 */
+    0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e,  /*  72 -  79 */
+    0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e,  /*  80 -  87 */
+    0x7e, 0x7e, 0x7e, 0x78, 0x78, 0x78, 0x78, 0x7e,  /*  88 -  95 */
+    0x78, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e,  /*  96 - 103 */
+    0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e,  /* 104 - 111 */
+    0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e, 0x7e,  /* 112 - 119 */
+    0x7e, 0x7e, 0x7e, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 120 - 127 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 128 - 135 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 136 - 143 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 144 - 151 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 152 - 159 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 160 - 167 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 168 - 175 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 176 - 183 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 184 - 191 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 192 - 199 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 200 - 207 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 208 - 215 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 216 - 223 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 224 - 231 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 232 - 239 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 240 - 247 */
+    0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78, 0x78,  /* 248 - 255 */
+};
